tests/ui/rfcs/rfc-2008-non-exhaustive/uninhabited/patterns_same_crate.stderr
error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:51:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^
   |
   = note: this pattern matches no values because `UninhabitedEnum` is uninhabited
note: the lint level is defined here
  --> $DIR/patterns_same_crate.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:56:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^
   |
   = note: this pattern matches no values because `UninhabitedVariants` is uninhabited

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:60:15
   |
LL |     while let PartiallyInhabitedVariants::Struct { x } = partially_inhabited_variant() {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this pattern matches no values because `!` is uninhabited

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:64:15
   |
LL |     while let Some(_x) = uninhabited_struct() {
   |               ^^^^^^^^
   |
   = note: this pattern matches no values because `UninhabitedStruct` is uninhabited

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:67:15
   |
LL |     while let Some(_x) = uninhabited_tuple_struct() {
   |               ^^^^^^^^
   |
   = note: this pattern matches no values because `UninhabitedTupleStruct` is uninhabited

error: aborting due to 5 previous errors

